// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductMediaViewer /> component its snapshot matches story Default 1`] = `
.c1 {
  height: 100%;
  max-width: 90%;
}

.c0 {
  aspect-ratio: 1 / 1;
  border: solid 0.0625rem #e0e0e0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

.c2 {
  overflow: hidden;
  margin-top: 2rem;
}

.c3 {
  display: none;
}

.c4 {
  aspect-ratio: 1 / 1;
  border: 1px solid #dedede;
  position: relative;
}

.c6 {
  aspect-ratio: 1 / 1;
  border: 1px solid #dedede;
  position: relative;
}

.c6 img {
  -webkit-filter: brightness(1.5) saturate(50%);
  filter: brightness(1.5) saturate(50%);
}

.c5 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

@media (min-width:672px) {
  .c3 {
    display: grid;
    grid-template-columns: repeat(10,calc(25% - 1.5rem));
    grid-template-rows: 1fr;
    gap: 2rem;
  }
}

<div>
  <div
    class="ProductMediaViewerstyles__Container-sc-3jsqs0-0"
  >
    <div
      class="c0"
    >
      <img
        alt="ALT"
        class="c1"
        src="http://placeimg.com/640/480/people"
      />
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <img
            alt="FPO 1"
            class="c5"
            src="http://placeimg.com/640/480/animals"
          />
        </div>
        <div
          class="c6"
        >
          <img
            alt="FPO 1"
            class="c5"
            src="http://placeimg.com/640/480/business"
          />
        </div>
        <div
          class="c6"
        >
          <img
            alt="FPO 1"
            class="c5"
            src="http://placeimg.com/640/480/food"
          />
        </div>
        <div
          class="c6"
        >
          <img
            alt="FPO 1"
            class="c5"
            src="http://placeimg.com/640/480/nightlife"
          />
        </div>
        <div
          class="c6"
        >
          <img
            alt="FPO 1"
            class="c5"
            src="http://placeimg.com/640/480/sports"
          />
        </div>
        <div
          class="c6"
        >
          <img
            alt="FPO 1"
            class="c5"
            src="http://placeimg.com/640/480/transport"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProductMediaViewer /> component its snapshot matches story Skeleton 1`] = `
.c1 {
  height: 100%;
  max-width: 90%;
}

.c0 {
  aspect-ratio: 1 / 1;
  border: solid 0.0625rem #e0e0e0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

.c2 {
  overflow: hidden;
  margin-top: 2rem;
}

.c3 {
  display: none;
}

.c4 {
  aspect-ratio: 1 / 1;
  border: 1px solid #dedede;
  position: relative;
}

.c4 img {
  -webkit-filter: brightness(1.5) saturate(50%);
  filter: brightness(1.5) saturate(50%);
}

.c5 {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

@media (min-width:672px) {
  .c3 {
    display: grid;
    grid-template-columns: repeat(10,calc(25% - 1.5rem));
    grid-template-rows: 1fr;
    gap: 2rem;
  }
}

<div>
  <div
    class="ProductMediaViewerstyles__Container-sc-3jsqs0-0"
  >
    <div
      class="c0"
    >
      <img
        alt="ALT"
        class="c1"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP88B8AAuUB8e2ujYwAAAAASUVORK5CYII="
      />
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <img
            alt="FPO 1"
            class="c5"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP88B8AAuUB8e2ujYwAAAAASUVORK5CYII="
          />
        </div>
        <div
          class="c4"
        >
          <img
            alt="FPO 1"
            class="c5"
            src=" data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP88B8AAuUB8e2ujYwAAAAASUVORK5CYII="
          />
        </div>
        <div
          class="c4"
        >
          <img
            alt="FPO 1"
            class="c5"
            src="  data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP88B8AAuUB8e2ujYwAAAAASUVORK5CYII="
          />
        </div>
        <div
          class="c4"
        >
          <img
            alt="FPO 1"
            class="c5"
            src="   data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mP88B8AAuUB8e2ujYwAAAAASUVORK5CYII="
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
